--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
     }
     buildTypes {
         debug {
-            buildConfigField "String", "APP_URL", "\"https://zhidao.baidu.com/\""
+            buildConfigField "String", "APP_URL", "\"http://gank.io/\""
             buildConfigField "String", "EXTRA_URL", " \"\" "
             signingConfig signingConfigs.release
             appName = "debug"
@@ -56,8 +56,8 @@ android {
             manifestPlaceholders = [APPLICATION_NAME: "${appName}"]
         }
         release {
-            buildConfigField "String", "APP_URL", "\"https://www.baidu.com/\""
-            buildConfigField "String", "EXTRA_URL", "\"cloud_radio/\""
+            buildConfigField "String", "APP_URL", "\"http://gank.io/\""
+            buildConfigField "String", "EXTRA_URL", "\"\""
             minifyEnabled false
             signingConfig signingConfigs.release
             appName = "release"
@@ -77,41 +77,42 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //Multidex
+    //工具类
+    //依赖注入
+    //图片访问
+    //网络访问
+    //rx系列
+    //事件总线
+    //Adapter
+    //可以切换内容，错误，空布局，加载中视图的View
+    //加载动画
+    //换肤
+    //数据类注解
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    //Multidex
     compile 'com.android.support:multidex:1.0.1'
-    //工具类
     compile 'com.blankj:utilcode:1.3.5'
-    //依赖注入
     compile 'com.google.dagger:dagger:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    //图片访问
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    //网络访问
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    //rx系列
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
-    //事件总线
     compile 'org.greenrobot:eventbus:3.0.0'
-    //Adapter
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.0'
-    //可以切换内容，错误，空布局，加载中视图的View
     compile 'com.github.Kennyc1012:MultiStateView:1.3.0'
-    //加载动画
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
-    //换肤
     compile 'com.bilibili:magicasakura:0.1.6@aar'
-
+    compile 'javax.annotation:javax.annotation-api:1.2'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
