--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath 'com.novoda:bintray-release:0.5.0'
 
@@ -19,6 +20,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        google()
     }
 }
 
