--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,10 +6,11 @@ publish {
     userOrg = 'blackflagbin' //bintray注册的用户名
     groupId = 'com.blackflagbin' //compile引用时的第1部分groupId
     artifactId = 'commonlibrary' //compile引用时的第2部分项目名
-    publishVersion = '1.0.0' //compile引用时的第3部分版本号
+    publishVersion = '0.0.1-6' //compile引用时的第3部分版本号
     desc = '快速基础开发框架'
     website = 'https://github.com/BlackFlagBin/QuickDevProject'
 }
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -20,7 +21,7 @@ android {
         versionName "1.0"
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = [ moduleName : project.getName() ]
+                arguments = [moduleName: project.getName()]
             }
         }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -32,10 +33,10 @@ android {
 
     aaptOptions {
         cruncherEnabled false
-        useNewCruncher false
     }
-    lintOptions {
+    lintOptions{
         abortOnError false
+        checkReleaseBuilds false
     }
     signingConfigs {
         release {
@@ -47,20 +48,12 @@ android {
     }
     buildTypes {
         debug {
-            buildConfigField "String", "APP_URL", "\"http://gank.io/\""
-            buildConfigField "String", "EXTRA_URL", " \"\" "
             signingConfig signingConfigs.release
-            def appName = "debug"
             minifyEnabled false
-            manifestPlaceholders = [APPLICATION_NAME: "${appName}"]
         }
         release {
-            buildConfigField "String", "APP_URL", "\"http://gank.io/\""
-            buildConfigField "String", "EXTRA_URL", "\"\""
             minifyEnabled false
             signingConfig signingConfigs.release
-            def appName = "release"
-            manifestPlaceholders = [APPLICATION_NAME: "${appName}"]
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -77,33 +70,34 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:cardview-v7:25.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.blankj:utilcode:1.7.1'
     compile 'com.google.dagger:dagger:2.11'
-    compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.jakewharton:butterknife:8.7.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.0'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.24'
     compile 'com.github.Kennyc1012:MultiStateView:1.3.0'
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'com.bilibili:magicasakura:0.1.6@aar'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.alibaba:arouter-api:1.2.1.1'
+    compile 'com.github.anzaizai:EasySwipeMenuLayout:1.1.2'
     compile 'javax.annotation:javax.annotation-api:1.2'
-    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.2.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 }
