--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,7 +34,7 @@ android {
     aaptOptions {
         cruncherEnabled false
     }
-    lintOptions{
+    lintOptions {
         abortOnError false
         checkReleaseBuilds false
     }
@@ -62,6 +62,10 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
@@ -69,7 +73,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support:design:25.4.0'
     compile 'com.android.support:cardview-v7:25.4.0'
@@ -95,8 +98,10 @@ dependencies {
     compile 'com.bilibili:magicasakura:0.1.6@aar'
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.alibaba:arouter-api:1.2.1.1'
+    compile 'com.jph.takephoto:takephoto_library:4.0.3'
     compile 'com.github.anzaizai:EasySwipeMenuLayout:1.1.2'
     compile 'javax.annotation:javax.annotation-api:1.2'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.2.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
