--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile 'com.alibaba:arouter-annotation:1.0.3'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 }
