--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,7 +6,7 @@ publish {
     userOrg = 'blackflagbin' //bintray注册的用户名
     groupId = 'com.blackflagbin' //compile引用时的第1部分groupId
     artifactId = 'commonlibrary' //compile引用时的第2部分项目名
-    publishVersion = '0.0.1-7' //compile引用时的第3部分版本号
+    publishVersion = '0.0.1-9' //compile引用时的第3部分版本号
     desc = '快速基础开发框架'
     website = 'https://github.com/BlackFlagBin/QuickDevProject'
 }
@@ -15,15 +15,10 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [moduleName: project.getName()]
-            }
-        }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             abiFilters "arm64-v8a", 'armeabi-v7a', "armeabi"
@@ -79,7 +74,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.blankj:utilcode:1.7.1'
-    compile 'com.google.dagger:dagger:2.11'
     compile 'com.jakewharton:butterknife:8.7.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
@@ -90,19 +84,15 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
-    compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.24'
     compile 'com.github.Kennyc1012:MultiStateView:1.3.0'
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'com.bilibili:magicasakura:0.1.6@aar'
     compile 'org.greenrobot:greendao:3.2.2'
-    compile 'com.alibaba:arouter-api:1.2.1.1'
-    compile 'com.jph.takephoto:takephoto_library:4.0.3'
+    compile 'com.hx.multi-image-selector:multi-image-selector:1.2.1'
     compile 'com.github.anzaizai:EasySwipeMenuLayout:1.1.2'
     compile 'javax.annotation:javax.annotation-api:1.2'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.2.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 }
