--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     compile 'com.alibaba:arouter-annotation:1.0.3'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'com.android.support:support-v4:25.3.1'
+//    compile 'com.blackflagbin:commonlibrary:0.0.1-11'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 }
