--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,17 +6,17 @@ publish {
     userOrg = 'blackflagbin' //bintray注册的用户名
     groupId = 'com.blackflagbin' //compile引用时的第1部分groupId
     artifactId = 'commonlibrary' //compile引用时的第2部分项目名
-    publishVersion = '0.0.1-29' //compile引用时的第3部分版本号
+    publishVersion = '0.0.1-32' //compile引用时的第3部分版本号
     desc = '快速基础开发框架'
     website = 'https://github.com/BlackFlagBin/QuickDevProject'
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -69,11 +69,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
-    compile 'com.android.support:cardview-v7:25.4.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.2.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
     compile 'com.blankj:utilcode:1.7.1'
     compile 'com.jakewharton:butterknife:8.7.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
