--- a/kcommon/build.gradle
+++ b/kcommon/build.gradle
@@ -26,8 +26,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'org.jetbrains.anko:anko:0.10.3'
     implementation 'androidx.core:core-ktx:0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
@@ -36,8 +37,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation "com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x"
-    implementation "io.reactivex.rxjava2:rxjava:2.1.7"
+    implementation 'com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
     implementation 'com.github.VictorAlbertos.Jolyglot:gson:0.0.4'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
@@ -53,12 +54,11 @@ dependencies {
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-kotlin:2.2.1'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:2.2.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.2.30"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.30'
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
 }
 repositories {
     mavenCentral()
